pagina modificada en rama1

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </figure>
       </header>
      <article class="article">
-        <h1 class="article__title">Guillermo Sifuentes</h1>
-        <h2 class="article__keywords">👨‍💻Desarrollador👨‍💻 | 🌌Frontend🌌 | ⚛React⚛ | 💻Docente💻</h2>
+        <h1 class="article__title">Giancarlo Mendoza</h1>
+        <h2 class="article__keywords">👨‍💻Desarrollador Web👨‍💻 | 🌌Frontend🌌 | 🌌Backend🌌 | ⚛React⚛ | 💻Docente💻</h2>
         <p class="article__presentation">
           Developer Front End-DEsigner 
         </p>
